# hanchly

./: CMakeLists.txt  CNAME  COPYING  README  cedict.c  cedict.h  cli.c  dict.c  dict.h  enpy.c  enpy.h  index.html  pinyin.c  pinyin.h  unihan.c  unihan.h
data/: english_pinyin  pinyin_syllables  pinyin_syllables.txt
scripts/: create_dict.pl  create_freq_table.sh  create_unihan.pl  download.cmake  objcopy.cmake
test/: CMakeLists.txt  test_cedict.cpp  test_enpy.cpp  test_pinyin.cpp  test_unihan.cpp
